# gkey

./: .gitignore  Cargo.toml  LICENSE  README.md  RUNNING.md  config.example.toml
.github/workflows/: ci.yml
crates/gkey-core/: Cargo.toml
crates/gkey-core/src/: action.rs  config.rs  keys.rs  lib.rs
crates/gkey-settings/: Cargo.toml  build.rs
crates/gkey-settings/src/: main.rs
crates/gkey-watcher/: Cargo.toml
crates/gkey-watcher/src/: main.rs
crates/gkeyd/: Cargo.toml  build.rs
crates/gkeyd/examples/: uiadump.rs
crates/gkeyd/src/: engine.rs  hints.rs  hook.rs  input.rs  main.rs  overlay.rs  state.rs  tiling.rs  tray.rs  uia.rs  watchdog.rs  winevent.rs
docs/: RESEARCH.md
scripts/: build-release.ps1  install.ps1  sign.ps1
