[workspace]
resolver = "2"
members = ["crates/gkey-core", "crates/gkeyd", "crates/gkey-settings", "crates/gkey-watcher"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["gkey"]

[workspace.dependencies]
windows = "0.58"
crossbeam-channel = "0.5"
arc-swap = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
