[package]
name = "gkeyd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "gkey daemon — system-wide Vimium-style keyboard control for Windows"

[[bin]]
name = "gkeyd"
path = "src/main.rs"

[dependencies]
gkey-core = { path = "../gkey-core" }
crossbeam-channel.workspace = true
arc-swap.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_UI_Accessibility",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_System_Console",
    "Win32_Media",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
]
